# ciel-sol

./: .env.example  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  README.md  ciel-technical-spec.md  ciel_copilot_deep_dive.md  ciel_product_spec.md  docker-compose.yml  prompt.md
.github/workflows/: ci.yml
crates/ciel-checkers/: Cargo.toml
crates/ciel-checkers/src/: approval_abuse.rs  authority_diff.rs  contagion_map.rs  dependency_graph.rs  event_cache.rs  hash.rs  intent_diff.rs  intent_rules.rs  lib.rs  mev_sandwich.rs  oracle_cache.rs  oracle_sanity.rs  program_registry.rs  runner.rs  scorer.rs  sim_patterns.rs  sim_spoof.rs  stubs.rs  traits.rs
crates/ciel-checkers/tests/: parse_real_oracles.rs
crates/ciel-demo/: Cargo.toml
crates/ciel-demo/src/: main.rs
crates/ciel-enforcement/: Cargo.toml
crates/ciel-enforcement/src/: lib.rs
crates/ciel-fixtures/: Cargo.toml
crates/ciel-fixtures/src/: drift.rs  lib.rs
crates/ciel-fork/: Cargo.toml
crates/ciel-fork/src/: cache.rs  executor.rs  geyser.rs  lib.rs  rpc.rs  simulator.rs  staleness.rs  trace.rs
crates/ciel-fork/tests/: drift_fixture_smoke.rs
crates/ciel-intent/: Cargo.toml
crates/ciel-intent/src/: lib.rs
crates/ciel-llm/: Cargo.toml
crates/ciel-llm/src/: lib.rs
crates/ciel-pipeline/: Cargo.toml
crates/ciel-pipeline/src/: lib.rs  outcome.rs  pipeline.rs  scorer_stub.rs  verdict_store.rs
crates/ciel-sdk/: Cargo.toml
crates/ciel-sdk/src/: lib.rs
crates/ciel-server/: Cargo.toml  build.rs
crates/ciel-server/src/: grpc.rs  lib.rs  main.rs  metrics.rs  rest.rs  tx_from_fixture.rs
crates/ciel-signer/: Cargo.toml
crates/ciel-signer/examples/: gen_pea_examples.rs
crates/ciel-signer/fixtures/: attestation_fixtures.json
crates/ciel-signer/src/: attestation.rs  instruction.rs  lib.rs  pea.rs  signer.rs
docs/: 00-drift-exploit-fixture.md  01-fork-simulator.md  02-simulation-trace.md  03-geyser-subscriber.md  04-attestation-signer.md  05-checker-framework.md  06-pipeline-integration.md  07-api-server.md  10-oracle-sanity-checker.md  11-authority-diff-checker.md  12-intent-diff-checker.md  13-approval-abuse-checker.md  14-sim-spoof-checker.md  15-scorer.md  16-llm-client.md  17-drift-replay-e2e.md  20-ciel-assert-program.md  21-lighthouse-integration.md  22-squads-integration.md  23-jito-integration.md  24-contagion-map-checker.md  25-mev-sandwich-checker.md  26-override-mechanism.md  30-intent-compiler.md  31-candidate-generator.md  32-parallel-scoring.md  33-intent-bundle-assembly.md  34-x402-gateway.md  35-agent-sdk.md  36-mcp-server.md  37-pre-certified-mode.md  40-demo-harness.md  41-demo1-drift-replay.md  42-demo2-intent-flow.md  43-video-and-submission.md  index.md
fixtures/drift-exploit/: accounts.json  metadata.json  real_exploit_metadata.json  transaction.json
fixtures/drift-exploit-real/: accounts.json  metadata.json  transaction.json
gateway/: Dockerfile  package.json
gateway/src/: index.ts
migrations/: 001_verdict_log.sql  002_tx_signature.sql
programs/ciel-assert/: Cargo.toml
programs/ciel-assert/src/: lib.rs
proto/: ciel.proto
sdk/mcp-server/: package.json
sdk/mcp-server/src/: index.ts
sdk/typescript/: package.json
sdk/typescript/src/: index.ts  pea.ts
spec/: GOVERNANCE.md  LICENSE  README.md  ciel-pea-1.0-test-vectors.md  ciel-pea-1.0.md  ciel-pea-1.0.schema.json  test-public-key.txt
spec/examples/: approve.json  block.json  timeout.json  warn.json
src/: main.rs
