[package]
name = "ciel-fork"
description = "Fork simulator: Surfpool/LiteSVM wrapper with account cache and geyser subscriber"
version.workspace = true
edition.workspace = true

[dependencies]
litesvm = { workspace = true }
solana-sdk = { workspace = true }
solana-client = { workspace = true }
tokio = { workspace = true }
dashmap = { workspace = true }
tonic = { workspace = true }
yellowstone-grpc-client = { workspace = true }
yellowstone-grpc-proto = { workspace = true }
tokio-stream = { workspace = true }
futures = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
reqwest = { workspace = true }
bincode = { workspace = true }

# LiteSVM type compatibility (different semver-major from solana-sdk 2.2)
# These resolve to the same crate instances already in Cargo.lock via litesvm 0.11.
litesvm-account = { package = "solana-account", version = "3.4" }
litesvm-address = { package = "solana-address", version = "2.6" }
litesvm-message = { package = "solana-message", version = "3.1" }
litesvm-transaction = { package = "solana-transaction", version = "3.1", features = ["bincode"] }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
ciel-fixtures = { path = "../ciel-fixtures" }
