[package]
name = "ciel-intent"
description = "Intent layer: NL compiler, Jupiter candidate generator, bundle assembly"
version.workspace = true
edition.workspace = true

[dependencies]
ciel-llm = { path = "../ciel-llm" }
ciel-enforcement = { path = "../ciel-enforcement" }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
solana-sdk = { workspace = true }
tokio = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
