[package]
name = "ciel-pipeline"
description = "Verdict pipeline: fork sim → checkers → scorer → signer, plus override and pre-certified mode"
version.workspace = true
edition.workspace = true

[dependencies]
ciel-fork = { path = "../ciel-fork" }
ciel-signer = { path = "../ciel-signer" }
ciel-checkers = { path = "../ciel-checkers" }
bincode = { workspace = true }
chrono = { workspace = true }
futures = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
metrics = { workspace = true }
solana-client = { workspace = true }
solana-sdk = { workspace = true }
sqlx = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
async-trait = { workspace = true }
borsh = { workspace = true }
litesvm-address = { package = "solana-address", version = "2.6" }
tokio = { workspace = true, features = ["test-util"] }
ciel-fixtures = { path = "../ciel-fixtures" }
