[package]
name = "ciel-server"
description = "axum REST + tonic gRPC API server"
version.workspace = true
edition.workspace = true

[dependencies]
ciel-pipeline = { path = "../ciel-pipeline" }
ciel-signer = { path = "../ciel-signer" }
axum = { workspace = true }
tonic = { workspace = true }
prost = { workspace = true }
tower = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }

[build-dependencies]
tonic-build = "0.12"

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
reqwest = { workspace = true }
