[package]
name = "ciel-signer"
description = "Attestation schemas (CielAttestation, PolicyAttestation, OverrideAttestation) and Ed25519 signing"
version.workspace = true
edition.workspace = true

[dependencies]
borsh = { workspace = true }
ed25519-dalek = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
solana-sdk = { workspace = true }
sha2 = { workspace = true }
rand = { workspace = true }
thiserror = { workspace = true }

# PEA / 1.0 envelope helpers (src/pea.rs)
base64 = "0.22"
hex = "0.4"

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
