[package]
name = "ciel-assert"
description = "On-chain Solana program: Ed25519 attestation verification via instruction sysvar"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[features]
no-entrypoint = []

[dependencies]
anchor-lang = "0.30"
borsh = "1"
solana-program = "2"
